tests/paczka1/fuzzy1/58452212.err
Error in line 10: jGKT A113 35,9
Error in line 16: jGKT A708 69,1
Error in line 21: UGwnikpN3GG A708 73,3
Error in line 35: S588 S745 (6,(
Error in line 29: jGKT S588 42,6
